--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <p class="para-3">An excellent experiance ever! <br> Meditation have given me the  another vision to see this world. <br> </p> 
+            <p class="para-3"> A Cherishing experience ! <br> Meditation had given me an another vision to see this world. <br> </p> 
               <img class="uncle-lee" src="fotor_2023-3-4_20_2_11.jpg" alt="profile-pic"> <br>
           </div>
           <div class="carousel-item">
-            <p class="para-4"> Zen meditation changed my life. <br> Tremendous beautiful experiance  I have ever had. <br> </p> 
+            <p class="para-4"> Zen meditation changed my life. <br> Tremendously beautiful experience I've ever had. <br> </p> 
               <img class="sis-pic" src="fotor_2023-3-4_19_59_51.jpg" alt="profile-pic"> <br>
           </div>
          
